# fdmulti

./: .gitignore  LICENSE  README.md  pyproject.toml
fdmulti/: check.py  cli.py  process.py  setuplogging.py
